# lg_srcml

./: .gitignore  .gitmodules  CMakeLists.txt  autogenerate_examplelib.py  autogenerate_mylib.py  autogenerate_srcml.py  build.md  prepare_template.py  setup.py
bindings/: module.cpp  pybind_examplelib.cpp  pybind_mylib.cpp  pybind_srcml.cpp
bindings/examplelib/: __init__.py  __init__.pyi
bindings/mylib/: __init__.py  __init__.pyi
bindings/srcml/: __init__.py  __init__.pyi
